@@ -5,36 +5,41 @@
     using System.Linq;
     using System.Text;
 
-    public class PartialFunction : IFunction
+    public class PartialFunction : IMultiFunction
     {
-        private IFunction function;
-        private List<IFunction> parameters = new List<IFunction>();
+        private IMultiFunction function;
+        private IFunction parameter;
 
-        public PartialFunction(IFunction function)
+        public PartialFunction(IMultiFunction function, IFunction parameter)
         {
             this.function = function;
+            this.parameter = parameter;
         }
 
         public int Arity
         {
-            get { return this.function.Arity - parameters.Count; }
+            get { return this.function.Arity - 1; }
         }
 
         public object Value { get { return this; } }
 
         public IFunction Apply(IFunction parameter)
         {
-            parameters.Add(parameter);
+            if (this.function.Arity == 2)
+            {
+                IList<IFunction> parameters = new List<IFunction>();
+                parameters.Add(this.parameter);
+                parameters.Add(parameter);
+                return this.function.Apply(parameters);
+            }
 
-            if (this.Arity == 0)
-                return this.function.Apply(this.parameters);
-
-            return this;
+            return new PartialFunction(this, parameter);
         }
 
         public IFunction Apply(IList<IFunction> parameters)
         {
-            throw new NotImplementedException();
+            parameters.Insert(0, this.parameter);
+            return this.function.Apply(parameters);
         }
     }
 }
